[package]
name = "dbfs-client"
description = "Databricks DBFS Client"
authors = ["Chen Xu<windoze@0d0a.com>"]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-client"]
keywords = ["databricks", "dbfs"]
readme = "README.md"

[dependencies]
log = "0.4"
thiserror = "1"
futures = { version = "0.3", features = ["std"], default-features = false }
async-trait = "0.1"
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }
pin-project = "1"
serde = { version = "1", features = ["derive", "rc"], default-features = false }
serde_json = "1"
reqwest = { version = "0.11", features = ["multipart", "stream", "json", "rustls-tls"], default-features = false }
base64 = "0.13"

[dev-dependencies]
dotenv = "0.15"
futures = { version = "0.3", default-features = true }
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
rand = "0.8"
